--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   banner_view: ^1.1.2
   dio: ^4.0.6
+  webview_flutter: ^3.0.4
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
